refactoring the code to improve readability