@@ -8,6 +8,7 @@ import com.logilink.emailanalyzer.repository.EmailAnalysisRepository;
 import com.logilink.emailanalyzer.util.EmailContentNormalizer;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Timer;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -16,7 +17,12 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.Date;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
 import java.util.function.Supplier;
 
 @Service
@@ -37,8 +43,7 @@ public class AnalysisService {
             EmailAnalysisRepository repository,
             MeterRegistry meterRegistry,
             JobProgressService jobProgressService,
-            AppSettingsService appSettingsService
-    ) {
+            AppSettingsService appSettingsService) {
         this.emailService = emailService;
         this.aiService = aiService;
         this.repository = repository;
@@ -52,27 +57,29 @@ public class AnalysisService {
     }
 
     public List<EmailAnalysis> processEmails(int maxEmails) {
-        return recordLatency("processEmails", () -> {
+        return recordLatency(AppConstants.Analysis.TIMER_OP_PROCESS_EMAILS, () -> {
             if (maxEmails <= 0) {
                 return List.of();
             }
-            List<FetchedEmailDto> emails = emailService.fetchEmails(
-                    maxEmails,
-                    ids -> ids.isEmpty() ? Set.of() : repository.findExistingEmailIdsIn(ids));
+            List<FetchedEmailDto> emails =
+                    emailService.fetchEmails(
+                            maxEmails,
+                            ids -> ids.isEmpty() ? Set.of() : repository.findExistingEmailIdsIn(ids));
             return processMessages(emails);
         });
     }
 
     public List<EmailAnalysis> processEmails(int maxEmails, Date startDate, Date endDate) {
-        return recordLatency("processEmailsByRange", () -> {
+        return recordLatency(AppConstants.Analysis.TIMER_OP_PROCESS_EMAILS_BY_RANGE, () -> {
             if (maxEmails <= 0) {
                 return List.of();
             }
-            List<FetchedEmailDto> emails = emailService.fetchEmailsByRange(
-                    maxEmails,
-                    startDate,
-                    endDate,
-                    ids -> ids.isEmpty() ? Set.of() : repository.findExistingEmailIdsIn(ids));
+            List<FetchedEmailDto> emails =
+                    emailService.fetchEmailsByRange(
+                            maxEmails,
+                            startDate,
+                            endDate,
+                            ids -> ids.isEmpty() ? Set.of() : repository.findExistingEmailIdsIn(ids));
             return processMessages(emails);
         });
     }
@@ -80,25 +87,29 @@ public class AnalysisService {
     /**
      * Wraps high-traffic email processing paths with latency timing and outcome tags.
      */
-    private List<EmailAnalysis> recordLatency(String operation, Supplier<List<EmailAnalysis>> work) {
+    private List<EmailAnalysis> recordLatency(
+            String operation, Supplier<List<EmailAnalysis>> work) {
         Timer.Sample sample = Timer.start(meterRegistry);
-        String outcome = "success";
+        String outcome = AppConstants.Analysis.METER_OUTCOME_SUCCESS;
         try {
             return work.get();
         } catch (RuntimeException ex) {
-            outcome = "error";
+            outcome = AppConstants.Analysis.METER_OUTCOME_ERROR;
             throw ex;
         } finally {
             sample.stop(
                     Timer.builder(AppConstants.Metrics.PROCESSING_LATENCY_METRIC)
                             .description("End-to-end email processing latency")
-                            .tag("operation", operation)
-                            .tag("outcome", outcome)
-                            .register(meterRegistry)
-            );
+                            .tag(AppConstants.Analysis.METER_TAG_OPERATION, operation)
+                            .tag(AppConstants.Analysis.METER_TAG_OUTCOME, outcome)
+                            .register(meterRegistry));
         }
     }
 
+    /**
+     * Fan-out analysis over the candidate list using virtual threads and a bounded semaphore to cap
+     * concurrent LLM calls.
+     */
     private List<EmailAnalysis> processMessages(List<FetchedEmailDto> emails) {
         if (emails.isEmpty()) {
             log.info("No emails to analyze.");
@@ -108,43 +119,47 @@ public class AnalysisService {
         log.info("Starting analysis of {} emails using virtual threads.", emails.size());
         jobProgressService.setTotalCandidates(emails.size());
 
-        int maxConcurrency = 10; // Limit concurrent AI requests to avoid rate limits
-        java.util.concurrent.Semaphore semaphore = new java.util.concurrent.Semaphore(maxConcurrency);
-        java.util.concurrent.ExecutorService executor = java.util.concurrent.Executors.newVirtualThreadPerTaskExecutor();
+        Semaphore semaphore = new Semaphore(AppConstants.Analysis.MAX_CONCURRENT_AI_REQUESTS);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
 
-        List<java.util.concurrent.CompletableFuture<EmailAnalysis>> futures = emails.stream()
-                .map(email -> java.util.concurrent.CompletableFuture.supplyAsync(() -> {
-                    if (jobProgressService.isStopRequested()) {
-                        return null;
-                    }
+        List<CompletableFuture<EmailAnalysis>> futures =
+                emails.stream()
+                        .map(
+                                email ->
+                                        CompletableFuture.supplyAsync(
+                                                () -> {
+                                                    if (jobProgressService.isStopRequested()) {
+                                                        return null;
+                                                    }
 
-                    try {
-                        semaphore.acquire();
-                        try {
-                            return analyzeSingleEmail(email);
-                        } finally {
-                            semaphore.release();
-                        }
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
-                        return null;
-                    }
-                }, executor))
-                .toList();
+                                                    try {
+                                                        semaphore.acquire();
+                                                        try {
+                                                            return analyzeSingleEmail(email);
+                                                        } finally {
+                                                            semaphore.release();
+                                                        }
+                                                    } catch (InterruptedException e) {
+                                                        Thread.currentThread().interrupt();
+                                                        return null;
+                                                    }
+                                                },
+                                                executor))
+                        .toList();
 
-        List<EmailAnalysis> processedAnalyses = futures.stream()
-                .map(java.util.concurrent.CompletableFuture::join)
-                .filter(java.util.Objects::nonNull)
-                .toList();
+        List<EmailAnalysis> processedAnalyses =
+                futures.stream().map(CompletableFuture::join).filter(Objects::nonNull).toList();
 
-        log.info("Finished analysis of {} emails. Successfully processed: {}", emails.size(), processedAnalyses.size());
+        log.info(
+                "Finished analysis of {} emails. Successfully processed: {}",
+                emails.size(),
+                processedAnalyses.size());
         return processedAnalyses;
     }
 
     private EmailAnalysis analyzeSingleEmail(FetchedEmailDto email) {
         String emailId = email.getEmailId();
         try {
-            // Idempotency check
             if (repository.existsByEmailId(emailId)) {
                 log.info("Email {} already processed. Skipping.", emailId);
                 jobProgressService.incrementSkipped("Email " + emailId + " already processed. Skipped.");
@@ -153,41 +168,43 @@ public class AnalysisService {
 
             String subject = email.getSubject();
             String sender = email.getSenderLine();
-            String content = email.getContent() != null ? email.getContent() : "";
+            String content = StringUtils.defaultString(email.getContent());
             LocalDateTime emailDate = email.getEmailDate();
 
             log.info("Analyzing email: '{}' from {}", subject, sender);
             long start = System.currentTimeMillis();
 
-            EmailAnalysisResult result = aiService.analyzeEmail(
-                    emailId,
-                    subject,
-                    sender,
-                    content,
-                    email.getInReplyTo(),
-                    email.getReferences(),
-                    email.getAttachments()
-            );
-            if(result.isNotProcessedByLLM()){
+            EmailAnalysisResult result =
+                    aiService.analyzeEmail(
+                            emailId,
+                            subject,
+                            sender,
+                            content,
+                            email.getInReplyTo(),
+                            email.getReferences(),
+                            email.getAttachments());
+            if (result.isNotProcessedByLLM()) {
                 log.info("Email {} is not processed by LLM. Skipping.", emailId);
                 jobProgressService.incrementSkipped("Email " + emailId + " is not processed by LLM. Skipped.");
                 return null;
             }
             enrichResult(result, emailId, subject, sender, emailDate);
 
-            // Save to DB
-            EmailAnalysis savedAnalysis = saveAnalysis(
-                    result,
-                    content,
-                    email.getInReplyTo(),
-                    email.getReferences()
-            );
+            EmailAnalysis savedAnalysis =
+                    saveAnalysis(result, content, email.getInReplyTo(), email.getReferences());
             jobProgressService.incrementProcessed(
-                    "Processed email " + emailId + " with score " + result.getCriticalityScore() + "."
-            );
+                    "Processed email "
+                            + emailId
+                            + " with score "
+                            + result.getCriticalityScore()
+                            + ".");
 
             long end = System.currentTimeMillis();
-            log.info("Analysis complete for email '{}' (Score: {}, Time: {} ms)", subject, result.getCriticalityScore(), (end - start));
+            log.info(
+                    "Analysis complete for email '{}' (Score: {}, Time: {} ms)",
+                    subject,
+                    result.getCriticalityScore(),
+                    end - start);
             return savedAnalysis;
 
         } catch (Exception e) {
@@ -202,15 +219,14 @@ public class AnalysisService {
             String emailId,
             String subject,
             String sender,
-            LocalDateTime emailDate
-    ) {
-        if (result.getEmailId() == null || result.getEmailId().isBlank()) {
+            LocalDateTime emailDate) {
+        if (StringUtils.isBlank(result.getEmailId())) {
             result.setEmailId(emailId);
         }
-        if (result.getSubject() == null || result.getSubject().isBlank()) {
+        if (StringUtils.isBlank(result.getSubject())) {
             result.setSubject(subject);
         }
-        if (result.getSender() == null || result.getSender().isBlank()) {
+        if (StringUtils.isBlank(result.getSender())) {
             result.setSender(sender);
         }
         result.resolveEmailDate(emailDate);
@@ -218,33 +234,30 @@ public class AnalysisService {
 
     @Transactional
     protected EmailAnalysis saveAnalysis(
-            EmailAnalysisResult result,
-            String content,
-            String inReplyTo,
-            String references
-    ) {
+            EmailAnalysisResult result, String content, String inReplyTo, String references) {
         Long settingId = appSettingsService.getOrCreate().getId();
         String storedContent = EmailContentNormalizer.normalize(content);
-        EmailAnalysis entity = EmailAnalysis.builder()
-                .emailId(result.getEmailId())
-                .settingId(settingId)
-                .emailDate(result.getEmailDate())
-                .subject(result.getSubject())
-                .sender(result.getSender())
-                .content(storedContent)
-                .inReplyTo(inReplyTo)
-                .emailReferences(references)
-                .criticalityScore(result.getCriticalityScore())
-                .criticalityLevel(result.getCriticalityLevel())
-                .breakdown(result.getBreakdown())
-                .summary(result.getSummary())
-                .keyRisks(result.getKeyRisks())
-                .affectedStakeholders(result.getAffectedStakeholders())
-                .actionNeeded(result.getActionNeeded())
-                .recommendedAction(result.getRecommendedAction())
-                .estimatedResponseTime(result.getEstimatedResponseTime())
-                .confidence(result.getConfidence())
-                .build();
+        EmailAnalysis entity =
+                EmailAnalysis.builder()
+                        .emailId(result.getEmailId())
+                        .settingId(settingId)
+                        .emailDate(result.getEmailDate())
+                        .subject(result.getSubject())
+                        .sender(result.getSender())
+                        .content(storedContent)
+                        .inReplyTo(inReplyTo)
+                        .emailReferences(references)
+                        .criticalityScore(result.getCriticalityScore())
+                        .criticalityLevel(result.getCriticalityLevel())
+                        .breakdown(result.getBreakdown())
+                        .summary(result.getSummary())
+                        .keyRisks(result.getKeyRisks())
+                        .affectedStakeholders(result.getAffectedStakeholders())
+                        .actionNeeded(result.getActionNeeded())
+                        .recommendedAction(result.getRecommendedAction())
+                        .estimatedResponseTime(result.getEstimatedResponseTime())
+                        .confidence(result.getConfidence())
+                        .build();
 
         return repository.save(entity);
     }
